...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y8h-0o-w1D">
                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="60"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="otw-xK-Lwj"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="12"/>
                                        <state key="normal" title="LOGIN"/>
                                        <connections>
                                            <segue destination="tek-TY-a2f" kind="show" id="Ctg-8d-QIy"/>
                                        </connections>
                                    </button>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pbY-PW-wU1" userLabel="Invisible Separator View">
                                        <rect key="frame" x="187.5" y="0.0" width="1" height="60"/>
...
                                    <constraint firstItem="B0E-0J-T9b" firstAttribute="leading" secondItem="7ua-Xq-bTu" secondAttribute="leading" id="vtn-gh-LfA"/>
                                </constraints>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hZo-0G-Txh" userLabel="Forms View">
                                <rect key="frame" x="0.0" y="288.5" width="375" height="90"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R0L-n3-3kt">
                                        <rect key="frame" x="40" y="0.0" width="315" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="E-mail"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="ahC-CX-BNx"/>
                                        </constraints>
                                        <color key="textColor" red="0.1450980392" green="0.1450980392" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
...
                                        <rect key="frame" x="20" y="39" width="335" height="1"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="1" id="mbX-c6-BIq"/>
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JZm-LR-1K6">
                                        <rect key="frame" x="40" y="50" width="315" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Password"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="Ank-Ap-JBf"/>
                                        </constraints>
                                        <color key="textColor" red="0.14509803921568626" green="0.14509803921568626" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
...
                                    <constraint firstAttribute="trailing" secondItem="Wcs-N0-d4X" secondAttribute="trailing" id="UuS-5o-8qB"/>
                                    <constraint firstAttribute="height" constant="60" id="t6n-eo-DrX"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <accessibility key="accessibilityConfiguration" identifier="Login"/>
                        <constraints>
                            <constraint firstItem="JLc-qf-sIf" firstAttribute="leading" secondItem="RwQ-6g-Pna" secondAttribute="leading" id="3E6-ST-o6Z"/>
                            <constraint firstItem="qlP-eB-bZd" firstAttribute="centerX" secondItem="RwQ-6g-Pna" secondAttribute="centerX" id="BF9-2C-9Qr"/>
                            <constraint firstItem="7ua-Xq-bTu" firstAttribute="top" secondItem="RwQ-6g-Pna" secondAttribute="top" id="Gqd-J9-Uvk"/>
                            <constraint firstAttribute="trailing" secondItem="hZo-0G-Txh" secondAttribute="trailing" id="M2i-RL-VPN"/>
                            <constraint firstItem="hZo-0G-Txh" firstAttribute="centerY" secondItem="RwQ-6g-Pna" secondAttribute="centerY" id="NR0-ig-eRT"/>
...
                                <connections>
                                    <outletCollection property="gestureRecognizers" destination="5U1-z2-Ny5" appends="YES" id="VYZ-3N-ZOL"/>
                                </connections>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <accessibility key="accessibilityConfiguration" identifier="Home"/>
                        <constraints>
                            <constraint firstItem="hxZ-s9-6Yh" firstAttribute="leading" secondItem="dcv-Hm-dGc" secondAttribute="leading" id="13A-gh-0QZ"/>
                            <constraint firstItem="3OJ-Qj-Iee" firstAttribute="leading" secondItem="dcv-Hm-dGc" secondAttribute="leading" id="54U-rJ-m48"/>
                            <constraint firstAttribute="bottom" secondItem="auj-9t-1SZ" secondAttribute="bottom" id="7LF-tu-3Nu"/>
                            <constraint firstAttribute="bottom" secondItem="hxZ-s9-6Yh" secondAttribute="bottom" id="Chb-WH-XCp"/>
                            <constraint firstItem="81n-0l-3pp" firstAttribute="leading" secondItem="lbA-uR-oUN" secondAttribute="leading" id="GSf-9H-mcI"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alH-st-8dE">
                                <rect key="frame" x="20" y="20" width="54" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="QmZ-ht-LHE"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="12"/>
                                <state key="normal" title="LOGOUT">
                                    <color key="titleColor" red="0.0" green="0.80392156862745101" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="logout:" destination="1U3-4u-Dbx" eventType="touchUpInside" id="xAE-4x-1LO"/>
                                </connections>
                            </button>
...
