...
        if let bike = UserManager.sharedInstance.user?.bikes[indexPath.section], let bikeId = bike.bikeId, let userId = UserManager.sharedInstance.user?.userId {
            LoadingOverlay.shared.showOverlay(view: UIApplication.shared.keyWindow!)
            removeBikeRequest.execute(bikeId: bikeId, userId: userId) {[weak self] (success, error) in
                LoadingOverlay.shared.hideOverlayView()
                if success {
                    let alert = UIAlertController(title: NSLocalizedString("Bike removed", comment: ""), message: "", preferredStyle: UIAlertControllerStyle.alert)
                    alert.addAction(UIAlertAction(title: NSLocalizedString("OK", comment: ""), style: UIAlertActionStyle.cancel, handler: { (action) in
                        self?.updateBikeDeletionUI(bike: bike, indexPath: indexPath)
                    }))

                    self?.present(alert, animated: true, completion: nil)
                } else {
                    let alert = UIAlertController(title: NSLocalizedString("Remove bike failed", comment: ""), message: error?.localizedDescription, preferredStyle: UIAlertControllerStyle.alert)
...
        tableView.deleteSections([indexPath.section], with: .automatic)
        tableView.endUpdates()
    }

    // MARK: - IBActions
    @IBAction func logout(_ sender: UIButton) {
        let alertController = UIAlertController(title: NSLocalizedString("Log out", comment: ""), message: NSLocalizedString("Are you sure you want to log out?", comment: ""), preferredStyle: .alert)

        let cancelAction = UIAlertAction(title: NSLocalizedString("Cancel", comment: ""), style: .cancel)

        let OKAction = UIAlertAction(title: NSLocalizedString("OK", comment: ""), style: .default) { (_) in
            UserManager.sharedInstance.clearUser()

...
